ci(changelog,github_actions): add changed.sh script to github actions
Signed-off-by: Bukowa <gitbukowa@gmail.com>

--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -24,3 +24,7 @@ jobs:
         run: |
           git fetch --tags
           ./.changelog/generate.sh all
+
+      - name: Check for changes
+        run: |
+          ./.changelog/changed.sh
