--- a/project-ghrp-npm/CHANGELOG/cliff.env
+++ b/project-ghrp-npm/CHANGELOG/cliff.env
@@ -6,3 +6,5 @@ GIT_CLIFF_TAG_PATTERN=project-ghrp-npm-v[0-9].*
 GIT_CLIFF_OUTPUT=project-ghrp-npm/CHANGELOG/CHANGELOG.LATEST.md
 GIT_CLIFF_PREPEND=project-ghrp-npm/CHANGELOG/CHANGELOG.md
 GIT_CLIFF_CONTEXT=project-ghrp-npm/CHANGELOG/CHANGELOG.CONTEXT.json
+
+CHANGELOG_PACKAGE_NAME=project-ghrp-npm
