--- a/project-ghrp-npm/CHANGELOG/cliff.toml
+++ b/project-ghrp-npm/CHANGELOG/cliff.toml
@@ -14,7 +14,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 # https://keats.github.io/tera/docs/#introduction
 body = """
 {% if version -%}
-    ## [{{ version | trim_start_matches(pat="v") | trim_start_matches(pat="project-ghrp-npm-v") }}] - {{ timestamp | date(format="%Y-%m-%d-%H-%M-%S") }}
+    ## [{{ version | trim_start_matches(pat="v") | trim_start_matches(pat="project-ghrp-npm-v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
 {% else -%}
     ## [Unreleased]
 {% endif -%}
