feat: new feature
Signed-off-by: Bukowa <gitbukowa@gmail.com>

--- a/project-ghrp-npm/CHANGELOG/cliff.toml
+++ b/project-ghrp-npm/CHANGELOG/cliff.toml
@@ -72,7 +72,7 @@ tag_pattern = 'project-ghrp-npm-v[0-9].*'
 # regex for skipping tags
 skip_tags = ""
 # regex for ignoring tags
-ignore_tags = ""
+ignore_tags = ".*beta"
 # sort the tags topologically
 topo_order = false
 # sort the commits inside sections by oldest/newest order
